fix: fixed overflow issues with long function names

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -17,8 +17,16 @@
 
 // Prevent default select behavior on images and icons
 img,
-.material-icons, .unselectable {
+.material-icons,
+.unselectable {
   user-select: none;
+}
+
+// Helper for text elements which should show ... after they overflow their container
+.no-overflow {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 // default font on everything
