--- a/public/styles/pages/editor/add.scss
+++ b/public/styles/pages/editor/add.scss
@@ -56,9 +56,6 @@
         #node-name {
           font-size: 1.4rem;
 
-          text-overflow: ellipsis;
-          white-space: nowrap;
-          overflow: hidden;
           text-transform: capitalize;
         }
 
